# ガゾーナラベPDFの更新履歴

- 2022-12-31 Ver.0.9.3
	- 初公開。
- 2023-01-01 Ver.0.9.4
    - ダイアログの改良。
    - 初期化したときにレジストリも更新するようにした。
    - PNG/GIF/BMP画像の品質を向上させた。
    - ICO/WMF/EMF画像に対応。
    - データのバリデーション。
    - インストーラを追加。
- 2023-01-01 Ver.0.9.5
    - マニフェストを追加。
    - バージョン情報を追加。
    - カーソル(CUR)に対応。
    - Susieプラグインをサポート。
    - リストボックスを横スクロール可能に。
    - フォントマップ情報「fontmap.dat」を追加。様々なフォントが利用可能に。
    - Unicodeサポート。
- 2023-01-02 Ver.0.9.6
    - リストボックスにコンテキストメニューを追加。
    - リストボックスでCtrl+Aを押すとすべて選択するようにした。
    - リストボックスでCtrl+U/Ctrl+Dを押すと項目を移動するようにした。
    - 物価高騰と原材料価格の上昇のため、価格を777円に変更(手数料等別途)。
- 2023-XX-YY Ver.0.9.7
    - テキストの解釈を改良する。
    - 「ページ見出し」「フッター」項目を追加。
    - フォルダをドラッグ＆ドロップすると中身の画像を追加するようにした。
    - 「すべて削除」ボタンを追加。
    - プレビューにもコンテキストメニューを追加。
    - プレビューをダブルクリックすると画像を開くようにした。
    - <拡張子なしファイル名>タグを追加。