@@ -29,6 +29,8 @@
 - <width> : 画像の幅（ピクセル単位）。
 - <height> : 画像の高さ（ピクセル単位）。
 - <file-size> : 画像のファイルサイズ。
+- <paper-size> : 用紙サイズ。「A3」「A4」「A5」「B4」「B5」のいずれか。
+- <page-direction> : ページの向き。「Portrait」「Landscape」のいずれか。
 
 次のような日本語のタグもあります。
 
@@ -57,3 +59,5 @@
 - <幅> : 画像の幅（ピクセル単位）。<width>と同じ。
 - <高さ> : 画像の高さ（ピクセル単位）。<height>と同じ。
 - <ファイルサイズ> : 画像のファイルサイズ。<file-size>と同じ。
+- <用紙サイズ> : 用紙サイズ。「A3」「A4」「A5」「B4」「B5」のいずれか。<paper-size>と同じ。
+- <ページの向き> : ページの向き。「縦向き」「横向き」のいずれか。
