@@ -29,4 +29,5 @@
     - 「すべて削除」ボタンを追加。
     - プレビューにもコンテキストメニューを追加。
     - プレビューをダブルクリックすると画像を開くようにした。
-    - <拡張子なしファイル名>タグを追加。
+    - <filename-wo-extension>と<拡張子なしファイル名>タグを追加。
+    - <paper-size>、<page-direction>、<用紙サイズ>、<ページの向き>タグを追加。
